# ldap-utils

./: .cvsignore  .gitignore  .gitmodules  AUTHORS  COPYING  ChangeLog  ChangeLog.md  GPATH  GRTAGS  GSYMS  GTAGS  Makefile.am  README  README.md  TODO  TODO.md  acinclude.m4  autogen.sh  configure.ac
build-aux/: .gitignore  Makefile-xcode  autogen.sh  git-package-version.sh  git-tar-name.txt
doc/: .gitignore  Doxyfile.in  ldap2csv.1.in  ldap2json.1.in  ldapdebug.1.in  ldapinfo.1.in  ldaptree.1.in  oid.txt
doc/oidspecs/: iana-ldap-parameters.oidspec  template.oidspec
doc/oidspecs/rfc/: rfc2252.oidspec  rfc4512.oidspec  rfc4517.oidspec  rfc4523.oidspec  rfc4530.oidspec
doc/oidspecs/vendors/: microsoft.oidspec
doc/references/libldap/: .gitignore  Makefile  README.md  ldap_search_ext.c
doc/rfc/: README.md
include/: ldap-utils.h  ldapschema.h  ldaputils.h  ldaputils_cdefs.h  ldaputils_compat.h  ldif.h
ldap-utils.xcodeproj/: project.pbxproj
lib/: Makefile.am  ldif_api.c  ldif_api.h  libldif.h  libldif.sym
lib/libldapschema/: .gitignore  lerror.c  lerror.h  lformat.c  lformat.h  libldapschema.h  libldapschema.sym  lldap.c  lldap.h  llexer.c  llexer.h  lmemory.c  lmemory.h  loutput.c  loutput.h  lquery.c  lquery.h  lsort.c  lsort.h  lspec.c  lspec.h
lib/libldapschema/oidspectool/: Makefile  README.md  example.oidspec  oidspeclexer.l  oidspecparser.y  oidspectool.c
lib/libldapschema/specs/rfc/: rfc4517.oidspec
lib/libldaputils/: lconfig.c  lconfig.h  lconfig_opts.c  lconfig_opts.h  lentry.c  lentry.h  libldaputils.h  libldaputils.sym  lldap.c  lldap.h  lmemory.c  lmemory.h  lpasswd.c  lpasswd.h  ltree.c  ltree.h
lib/libldif/: api.c  libldif.sym
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
po/: Makevars  POTFILES.in  en.po  ldap-utils.pot
src/: csv2ldif.c  ldap2csv.c  ldap2json.c  ldapconfprint.c  ldapconftest.c  ldapconns.c  ldapdebug.c  ldapdn2str.c  ldapinfo.c  ldapppolicy.c  ldaprc  ldapschema.c  ldapsetup.c  ldaptree.c  ldaputils_common.c  ldaputils_common.h  ldaputils_config.c  ldaputils_config.h  ldaputils_config_opts.c  ldaputils_config_opts.h  ldaputils_ldap.c  ldaputils_ldap.h  ldaputils_misc.c  ldaputils_misc.h  ldaputils_test.c
src/utils/oidspectool/: .gitignore  README.md  example.oidspec  oidspeclexer.l  oidspecparser.y  oidspectool.c  oidspectool.h
tests/: ldaptest.c  readline.c
